fixed the buttons on mobile lol

--- a/static/app.css
+++ b/static/app.css
@@ -1140,7 +1140,7 @@ div.tabs a {
 	color: #555;
 	background: #f6f6f6;
 	display: inline-block;
-	min-width: 90px;
+	min-width: 95px;
 }
 div.tabs a.active {
 	background: #edebf5;
@@ -1303,5 +1303,9 @@ div.tabs a.active {
 		margin: 12px 0px;
 		border-radius: 4px;
 		border: solid 1px #111;
+	}
+	div.tabs a{
+		width: 35%;
+		margin-bottom: 2px;
 	}
 }
